<resources>
    <string name="app_name">Quiz App-3</string>
    <string name="QuestiοnText" />
    <string name="rb1" />
    <string name="rb2" />
    <string name="rb3" />
    <string name="rb4" />
    <string name="time" />
    <string name="answer">Απάντηση</string>
    <string name="scoreLabel">Σκορ:</string>
    <string name="noBonus">NO BONUS</string>
    <string name="scoreValue" />
    <string name="gameOver">Game Over!</string>
    <string name="finalScore">Τελικό Σκορ:</string>
    <string name="finalScoreValue"></string>


</resources>