<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EndGameActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/gameOver" android:textSize="30sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalScore" android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63sp" />
    <TextView
        android:id="@+id/textViewFinalScoreValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalScoreValue"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="66sp" />

</LinearLayout>